--- a/src/config.ini
+++ b/src/config.ini
@@ -21,6 +21,8 @@ DB_FILETYPES = [".db"]
 QUERY_IMPORTANCE = 0
 CODE_OFFSET = 3
 
+SERVER_ENABLED = 1
+
 ### Logging ###
 # Loglevel:
 # 3 => log everything
